--- a/templates/applications/auditlog.html
+++ b/templates/applications/auditlog.html
@@ -4,47 +4,51 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
-<div class="row">
-    {% if app %}
-    <div class="col-md-3">
-        {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+<div class="container-padded">
+    <div class="container container-padded">
+        <div class="row">
+            {% if app %}
+            <div class="col-sm-3">
+                {{ helper.render_app_local_nav(app, 'auditlog', current_user) }}
+            </div>
+            <div class="col-sm-9" style="min-height:400px">
+                {{ helper.render_app_title(app, upload_method) }}
+                {% if logs %}
+                <table class="table">
+                    <tr>
+                        <td>When</td>
+                        <td>Who</td>
+                        <td>Source</td>
+                        <td>Action</td>
+                        <td>Attribute</td>
+                        <td>Old Value</td>
+                        <td>New Value</td>
+                    </tr>
+                {% for log in logs | sort(reverse=True, attribute='created') %}
+                    <tr>
+                        <td>{{log.created}}</td>
+                        <td>{% if current_user.name == log.user_name%}You{%else%}{{log.user_name}}{%endif%}</td>
+                        <td>{{log.caller}}</td>
+                        <td>{{log.action}}</td>
+                        <td>{{log.attribute}}</td>
+                        <td>{{(log.old_value or "Nothing")|truncate(30)}}</td>
+                        <td>{{(log.new_value or "Nothing")|truncate(30)}}</td>
+                    </tr>
+        
+                {% endfor %}
+                </table>
+                {% else %}
+                    <h1>{{ _('Sorry! No logs so far.') }}</h1>
+                {% endif %}
+                <hr>
+            </div>
+            {% else %}
+            <div class="page-header">
+                <h1>{{ _('Sorry! This project does not exist.') }}</h1>
+            </div>
+            {% endif %}
+        </div>
     </div>
-    <div class="col-md-9" style="min-height:400px">
-        {{ helper.render_app_title(app, upload_method) }}
-        {% if logs %}
-        <table class="table">
-            <tr>
-                <td>When</td>
-                <td>Who</td>
-                <td>Source</td>
-                <td>Action</td>
-                <td>Attribute</td>
-                <td>Old Value</td>
-                <td>New Value</td>
-            </tr>
-        {% for log in logs | sort(reverse=True, attribute='created') %}
-            <tr>
-                <td>{{log.created}}</td>
-                <td>{% if current_user.name == log.user_name%}You{%else%}{{log.user_name}}{%endif%}</td>
-                <td>{{log.caller}}</td>
-                <td>{{log.action}}</td>
-                <td>{{log.attribute}}</td>
-                <td>{{(log.old_value or "Nothing")|truncate(30)}}</td>
-                <td>{{(log.new_value or "Nothing")|truncate(30)}}</td>
-            </tr>
-
-        {% endfor %}
-        </table>
-        {% else %}
-            <h1>{{ _('Sorry! No logs so far.') }}</h1>
-        {% endif %}
-        <hr>
-    </div>
-    {% else %}
-    <div class="page-header">
-        <h1>{{ _('Sorry! This project does not exist.') }}</h1>
-    </div>
-    {% endif %}
 </div>
 {{ helper.broken_image() }}
 {{ helper.knob() }}
