--- a/templates/applications/blog.html
+++ b/templates/applications/blog.html
@@ -4,12 +4,14 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
+        <div class="container-padded">
+        <div class="container container-padded">
 <div class="row">
     {% if app %}
-    <div class="col-md-3">
+    <div class="col-sm-3">
         {{ helper.render_app_local_nav(app, 'blog', current_user) }}
     </div>
-    <div class="col-md-9" style="min-height:400px">
+    <div class="col-sm-9" style="min-height:400px">
         {{ helper.render_app_title(app, upload_method) }}
         <hr>
         {% if blogposts %}
@@ -34,6 +36,8 @@
     </div>
     {% endif %}
 </div>
+</div>
+        </div>
 {{ helper.broken_image() }}
 {{ helper.knob() }}
 {% endblock %}
