--- a/templates/applications/password.html
+++ b/templates/applications/password.html
@@ -5,11 +5,13 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
+    <div class="container-padded">
+        <div class="container container-padded">
 <div id="app-form" class="row"> 
-    <div class="col-md-3">
+    <div class="col-sm-3">
         {{ helper.render_app_local_nav(app, 'contribute', current_user) }}
     </div>
-    <div class="col-md-6">
+    <div class="col-sm-6">
         {{ helper.render_app_title(app) }}
         <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
     <form class="form-horizontal" method="post" action="{{ url_for('app.password_required', short_name=short_name, next=next) }}">
@@ -23,6 +25,8 @@
         </fieldset>
     </form>
     </div>
+</div>
+</div>
 </div>
 {{ helper.broken_image() }}
 {{ helper.knob() }}
