--- a/templates/applications/presenter.html
+++ b/templates/applications/presenter.html
@@ -10,29 +10,33 @@
             });
 </script>
 <script src="{{url_for('static', filename="js/pybossa/pybossa.js")}}" type="text/javascript"></script>
-<div class="row">
-    <div class="col-md-12">
-        <h1><a href="{{url_for('app.details', short_name=app.short_name)}}">{{ app.name }}</a>: {{ _('Contribute') }}</h1>
+    <div class="container-padded">
+        <div class="container container-padded">
+        <div class="row">
+            <div class="col-xs-12">
+                <h1><a href="{{url_for('app.details', short_name=app.short_name)}}">{{ app.name }}</a>: {{ _('Contribute') }}</h1>
+            </div>
+        </div>
+        {% if invite_new_volunteers %}
+        <div class="row">
+            <div class="col-xs-12">
+                <p>
+                {{ _("Sorry, you've contributed to all the tasks for this project, but this project still needs more volunteers, so please spread the word!") }}
+                </p>
+            </div>
+        </div>
+        {% endif %}
+        {{ app.info.task_presenter|safe }}
+        
+        
+        <div id='PYBOSSA_USER_LOCALE' hidden>
+        {% if current_user.is_anonymous() %}
+        en
+        {% else %}
+        {{ current_user.locale }}
+        {% endif %}
+        </div>
     </div>
-</div>
-{% if invite_new_volunteers %}
-<div class="row">
-    <div class="col-md-12">
-        <p>
-        {{ _("Sorry, you've contributed to all the tasks for this project, but this project still needs more volunteers, so please spread the word!") }}
-        </p>
-    </div>
-</div>
-{% endif %}
-{{ app.info.task_presenter|safe }}
-
-
-<div id='PYBOSSA_USER_LOCALE' hidden>
-{% if current_user.is_anonymous() %}
-en
-{% else %}
-{{ current_user.locale }}
-{% endif %}
 </div>
 
 {% endblock %}
