--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -6,29 +6,33 @@
 
 {% block content %}
 {% if app %}
-        <div class="row">
-            <div class="col-md-3">
-                {{ helper.render_app_local_nav(app, 'tasks', current_user) }}
-            </div>
-            <div class="col-md-9">
-                {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
-                <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
-                    {{ form.hidden_tag() }}
-                    <fieldset>
-                        {{ render_field(form.n_answers, class_="input-block-level", placeholder= _('The number of answers per tasks that you want for the project')) }}
-                        <div class="form-actions">
-                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-primary" />
-                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
+<div class="container-padded">
+        <div class="container container-padded">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                {{ helper.render_app_local_nav(app, 'tasks', current_user) }}
+                            </div>
+                            <div class="col-sm-9">
+                                {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
+                                <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
+                                    {{ form.hidden_tag() }}
+                                    <fieldset>
+                                        {{ render_field(form.n_answers, class_="input-block-level", placeholder= _('The number of answers per tasks that you want for the project')) }}
+                                        <div class="form-actions">
+                                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-primary" />
+                                            <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div><!-- col-sm-9 -->
                         </div>
-                    </fieldset>
-                </form>
-            </div><!-- col-md-9 -->
+                {% else %}
+                  <div class="page-header">
+                      <h1>{{_('Sorry! This project does not exist.')}}.</h1>
+                  </div>
+                {% endif %}
+                {{ helper.broken_image() }}
+                {{ helper.knob() }}
         </div>
-{% else %}
-  <div class="page-header">
-      <h1>{{_('Sorry! This project does not exist.')}}.</h1>
-  </div>
-{% endif %}
-{{ helper.broken_image() }}
-{{ helper.knob() }}
+</div>
 {% endblock %}
