--- a/templates/applications/task_presenter_editor.html
+++ b/templates/applications/task_presenter_editor.html
@@ -19,37 +19,41 @@
         width: 700px;
       }
 </style>
-<div class="row">
-    <div class="col-md-3">
-        {{ helper.render_app_local_nav(app, 'tasks', current_user) }}
-    </div>
-    <div class="col-md-9">
-        <!-- Task Presenter Editor -->
-        <h1><strong>{{app.name}}</strong>: {{ _('Task Presenter Editor') }} <a class="btn btn-lg pull-right" href="http://docs.pybossa.com/en/latest/overview.html#task-presenter"><i class="glyphicon glyphicon-book"></i> {{ _('Help') }}</a></h1>
-        <form class="form-inline" method="post" action="{{ url_for('app.task_presenter_editor', short_name=app.short_name) }}">
-            {{ form.hidden_tag() }}
-            <fieldset>
-                {{ render_field(form.editor)}}
-                <div class="form-actions">
-                    <input type="submit" value={{ _('Update the project task presenter') }} class="btn btn-primary" />
-                    <a href="#" class="btn btn-preview" value="preview">{{ _('Preview the task presenter') }}</a>
-                    <a href="{{url_for('app.settings', short_name=app.short_name)}}" class="btn">{{ _('Cancel') }}</a>
-                </div>
-            </fieldset>
-        </form>
-    </div>
-</div>
-
-<div id="modal-preview" class="modal hide big-modal">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">{{ _('&times;') }}</button>
-        <h2><strong>{{app.name}}</strong>: {{ _('Task Presenter Preview') }}</h2>
-    </div>
-    <div class="modal-body">
-        <iframe id="preview" frameBorder="0"></iframe>
-    </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Close') }}</button>
+<div class="container-padded">
+    <div class="container container-padded">
+        <div class="row">
+            <div class="col-sm-3">
+                {{ helper.render_app_local_nav(app, 'tasks', current_user) }}
+            </div>
+            <div class="col-sm-9">
+                <!-- Task Presenter Editor -->
+                <h1><strong>{{app.name}}</strong>: {{ _('Task Presenter Editor') }} <a class="btn btn-lg pull-right" href="http://docs.pybossa.com/en/latest/overview.html#task-presenter"><i class="glyphicon glyphicon-book"></i> {{ _('Help') }}</a></h1>
+                <form class="form-inline" method="post" action="{{ url_for('app.task_presenter_editor', short_name=app.short_name) }}">
+                    {{ form.hidden_tag() }}
+                    <fieldset>
+                        {{ render_field(form.editor)}}
+                        <div class="form-actions">
+                            <input type="submit" value={{ _('Update the project task presenter') }} class="btn btn-primary" />
+                            <a href="#" class="btn btn-preview" value="preview">{{ _('Preview the task presenter') }}</a>
+                            <a href="{{url_for('app.settings', short_name=app.short_name)}}" class="btn">{{ _('Cancel') }}</a>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+        
+        <div id="modal-preview" class="modal hide big-modal">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">{{ _('&times;') }}</button>
+                <h2><strong>{{app.name}}</strong>: {{ _('Task Presenter Preview') }}</h2>
+            </div>
+            <div class="modal-body">
+                <iframe id="preview" frameBorder="0"></iframe>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Close') }}</button>
+            </div>
+        </div>
     </div>
 </div>
 <script>
