--- a/templates/applications/task_presenter_options.html
+++ b/templates/applications/task_presenter_options.html
@@ -4,12 +4,16 @@
 {% import "applications/_helpers.html" as helper %}
 
 {% block content %}
-<div class="row">
-    <div class="col-md-3">
-        {{ helper.render_app_local_nav(app, active_link, current_user) }}
+    <div class="container-padded">
+        <div class="container container-padded">
+            <div class="row">
+                <div class="col-sm-3">
+                    {{ helper.render_app_local_nav(app, active_link, current_user) }}
+                </div>
+                <div class="col-sm-9">
+                    {% include "applications/snippets/options.html" %}
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-9">
-        {% include "applications/snippets/options.html" %}
-    </div>
-</div>
 {% endblock %}
