--- a/templates/applications/tasks/delete.html
+++ b/templates/applications/tasks/delete.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-3">
         {{ helper.render_app_local_nav(app, active_link, current_user) }}
     </div>
-    <div class="col-md-9">
+    <div class="col-sm-9">
         <h1><strong>{{app.name}}</strong>: Delete all Tasks and Task Runs</h1>
         <div class="alert alert-danger">
             <strong>{{_('Danger Zone!')}}</strong> {{_('If you delete all the
