--- a/templates/applications/tutorial.html
+++ b/templates/applications/tutorial.html
@@ -7,14 +7,13 @@
 {{ app.info.tutorial | safe}}
 
 <div class="row">
-    <div class="col-md-12" style="text-align:center;padding-top:20px;">
+    <div class="col-sm-12" style="text-align:center;padding-top:20px;">
         <a id="start" href={{url_for('app.presenter', short_name = app.short_name)}}
            class="btn btn-primary btn-lg"> 
            <i class="glyphicon glyphicon-thumbs-up"></i> 
            {{_('Start contributing')}}!</a>
     </div>
 </div>
-
 <div id='PYBOSSA_USER_LOCALE' hidden>
 {% if current_user.is_anonymous() %}
 en
