--- a/templates/help/_cookies_policy.html
+++ b/templates/help/_cookies_policy.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-sm-12">
         <h1>How {{brand}} uses cookies</h1>
 
             <p>Cookies help a website remember information about your visit in order to improve your experience over subsequent visits.</p>
