--- a/templates/applications/importers/flickr.html
+++ b/templates/applications/importers/flickr.html
@@ -49,7 +49,7 @@
                 <span class="help-block"> {{ _('Or manually provide the ID of a Flickr set with images for') }} {{ active_app }}. <br/> {{ _('For more information, please look at') }} <a href="http://docs.pybossa.com/en/latest/user/overview.html#importing-the-tasks-from-a-flickr-photo-set" target="_blank">{{ _('the documentation') }}.</a></span>
                 {{ render_field(form.album_id, class_="input-block-level", placeholder="The ID of the Flickr set") }}
                 <div class="form-actions">
-                    <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-primary" />
+                    <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                     <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn">{{_('Cancel')}}</a>
                 </div>
             </fieldset>
