--- a/templates/applications/new.html
+++ b/templates/applications/new.html
@@ -25,7 +25,7 @@
                         · Will you help make a difference? Explain to the volunteers why their contribution is essential and how the result of your project can help change things!                                                             
                     (you can use Markdown to give format to your description!)')) }}
                     <div class="form-actions">
-                        <input type="submit" value={{_('Create the project')}} class="btn btn-primary" />
+                        <input type="submit" value={{_('Create the project')}} class="btn btn-danger" />
                         <a href="{{url_for('account.profile', name=current_user.name)}}" class="btn">{{_('Cancel')}}</a>
                     </div>
                 </fieldset>
