--- a/templates/applications/password.html
+++ b/templates/applications/password.html
@@ -20,7 +20,7 @@
             {{ form.password(class="form-control", placeholder=_('Project password')) | safe}}
             <div class="form-actions">
                 <a href="{{ url_for('home.home') }}" class="btn">{{ _('Cancel') }}</a>
-                <button type="submit" name='btn' value="New" class="btn btn-primary">{{ _('Submit') }}</button>
+                <button type="submit" name='btn' value="New" class="btn btn-danger">{{ _('Submit') }}</button>
             </div>
         </fieldset>
     </form>
