--- a/templates/applications/snippets/image.html
+++ b/templates/applications/snippets/image.html
@@ -59,7 +59,7 @@
             load the comments, if any, for the given task
         -->
         <div id="disqus_show_btn" style="margin-top:5px;">
-            <button class="btn btn-primary btn-lg btn-disqus" onclick="loadDisqus()"><i class="glyphicon glyphicon-comments"></i> <span id="i18n_show_comments">Show comments</span></button>
+            <button class="btn btn-danger btn-lg btn-disqus" onclick="loadDisqus()"><i class="glyphicon glyphicon-comments"></i> <span id="i18n_show_comments">Show comments</span></button>
             <button class="btn btn-lg btn-disqus" onclick="loadDisqus()" style="display:none"><i class="glyphicon glyphicon-comments"></i> <span id="i18n_hide_comments">Hide comments</span></button>
         </div><!-- End of Disqus Button section -->
         <!-- Disqus thread for the given task -->
