--- a/templates/applications/snippets/sound.html
+++ b/templates/applications/snippets/sound.html
@@ -58,7 +58,7 @@
             load the comments, if any, for the given task
         -->
         <div id="disqus_show_btn" style="margin-top:5px;">
-            <button class="btn btn-primary btn-lg btn-disqus" onclick="loadDisqus()"><i class="glyphicon glyphicon-comments"></i> Show comments</button>
+            <button class="btn btn-danger btn-lg btn-disqus" onclick="loadDisqus()"><i class="glyphicon glyphicon-comments"></i> Show comments</button>
             <button class="btn btn-lg btn-disqus" onclick="loadDisqus()" style="display:none"><i class="glyphicon glyphicon-comments"></i> Hide comments</button>
         </div><!-- End of Disqus Button section -->
         <!-- Disqus thread for the given task -->
