--- a/templates/applications/tasks/delete.html
+++ b/templates/applications/tasks/delete.html
@@ -23,7 +23,7 @@
           <button type="submit" name='btn' class="btn btn-sm"
               value="Yes">{{_('Yes')}}</button>
           <a href="{{ url_for('app.settings', short_name = app.short_name) }}"
-              class="btn btn-lg btn-primary">{{_('No, do not delete
+              class="btn btn-lg btn-danger">{{_('No, do not delete
               anything!')}}</a>
         </div>
     </div>
