--- a/templates/applications/delete.html
+++ b/templates/applications/delete.html
@@ -22,7 +22,7 @@
                 <h3><strong>{{ _('Are you sure you want to delete this project and all its tasks and associated task runs?') }}</strong></h3>
                 <div class="form-actions">
                   <input type="submit" class="btn btn-sm" value="Yes, delete it"/>
-                  <a href="{{ url_for('app.settings', short_name = app.short_name) }}" class="btn btn-lg btn-primary">{{ _('No, do not delete it!') }}</a>
+                  <a href="{{ url_for('app.settings', short_name = app.short_name) }}" class="btn btn-lg btn-danger">{{ _('No, do not delete it!') }}</a>
                 </div>
         </div>
       </div>
