--- a/templates/applications/importers/csv.html
+++ b/templates/applications/importers/csv.html
@@ -22,7 +22,7 @@
         <span class="help-block">{{_('Please provide a URL (i.e. DropBox, Box, Ubuntu One, etc. public link) to a CSV file with data for')}} {{ active_app }}.<br/> {{_('For more information, please look at')}} <a href="http://docs.pybossa.com/en/latest/user/overview.html#importing-the-tasks-via-the-built-in-csv-task-creator" target="_blank">{{_('the documentation')}}.</a></span>
           {{ render_field(form.csv_url, class_="input-block-level", placeholder=_('The URL of the CSV file')) }}
           <div class="form-actions">
-            <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-primary" />
+            <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
             <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn">{{_('Cancel')}}</a>
           </div>
         </fieldset>
