--- a/templates/applications/task_autoimporter.html
+++ b/templates/applications/task_autoimporter.html
@@ -34,7 +34,7 @@
                 <fieldset>
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                   <div class="form-actions">
-                    <input id="submit" type="submit" value="{{_('Delete')}}" class="btn btn-primary" />
+                    <input id="submit" type="submit" value="{{_('Delete')}}" class="btn btn-danger" />
                     <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn">{{_('Back')}}</a>
                   </div>
                 </fieldset>
