--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -19,7 +19,7 @@
                                     <fieldset>
                                         {{ render_field(form.n_answers, class_="input-block-level", placeholder= _('The number of answers per tasks that you want for the project')) }}
                                         <div class="form-actions">
-                                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-primary" />
+                                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-danger" />
                                             <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
                                         </div>
                                     </fieldset>
