--- a/templates/applications/task_scheduler.html
+++ b/templates/applications/task_scheduler.html
@@ -33,7 +33,7 @@
                     <fieldset>
                         {{ render_field(form.sched, class_="col-md-4", placeholder="Task scheduler for your app")}}
                         <div class="form-actions">
-                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-primary" />
+                            <input type="submit" value={{_('Set redundancy')}} class="btn btn-danger" />
                             <a href="{{url_for('app.tasks', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
                         </div>
                     </fieldset>
