--- a/templates/applications/tutorial.html
+++ b/templates/applications/tutorial.html
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-sm-12" style="text-align:center;padding-top:20px;">
         <a id="start" href={{url_for('app.presenter', short_name = app.short_name)}}
-           class="btn btn-primary btn-lg"> 
+           class="btn btn-danger btn-lg"> 
            <i class="glyphicon glyphicon-thumbs-up"></i> 
            {{_('Start contributing')}}!</a>
     </div>
