--- a/templates/applications/update_blogpost.html
+++ b/templates/applications/update_blogpost.html
@@ -22,7 +22,7 @@
                             {{ render_field(form.title, class_="col-md-4", placeholder= _('The title of your post')) }}
                             {{ render_field(form.body, class_="col-md-4", placeholder= _('Write your post here. You can use Markdown!')) }}
                             <div class="form-actions">
-                                <input type="submit" value={{_('Update')}} class="btn btn-primary" />
+                                <input type="submit" value={{_('Update')}} class="btn btn-danger" />
                                 <a href="{{url_for('app.settings', short_name=app.short_name)}}" class="btn">{{_('Cancel')}}</a>
                             </div>
                         </fieldset>
