--- a/templates/account/applications.html
+++ b/templates/account/applications.html
@@ -5,32 +5,35 @@
 {% import "applications/_helpers.html" as app_helper %}
 
 {% block content %}
-    <div class="container-main">
-<div class="row">
-    <div class="col-md-3">
-        {{ helper.render_account_local_nav(current_user, active_link) }}
-    </div>
-    <div class="col-md-9" style="min-height:400px">
-        <h1><strong>{{ current_user.fullname }}'s</strong>: {{ _('Projects') }}</h1>
-        {% if apps_published or apps_draft %}
-            {% if apps_published %}
-            <h2>{{ _('Published') }}</h2>
-            {% for app in apps_published %}
-            {{ app_helper.render_app_short_summary(app, upload_method) }}
-            {% endfor %}
-            {% endif %}
-            {% if apps_draft %}
-            <h2>{{ _('Draft') }}</h2>
-            {% for app in apps_draft %}
-            {{ app_helper.render_app_short_summary(app, upload_method) }}
-            {% endfor %}
-            {% endif %}
-        {% else %}
-            <h2>{{ _('You have not created any projects') }}</h2>
-            <a href="{{url_for('app.new')}}" class="btn btn-primary">{{ _('Get started') }}</a>
-        {% endif %}
-    </div>
-</div>
+    <div class="container-padded">
+        <div class="container container-padded">
+            <div class="row">
+                <div class="col-sm-12">
+                    {% if current_user.admin == 1 %}
+                        <h1><strong>{{ current_user.fullname }}'s</strong>: {{ _('Projects') }}</h1>
+                        {% if apps_published or apps_draft %}
+                            {% if apps_published %}
+                            <h2>{{ _('Published') }}</h2>
+                            {% for app in apps_published %}
+                            {{ app_helper.render_app_short_summary(app, upload_method) }}
+                            {% endfor %}
+                            {% endif %}
+                            {% if apps_draft %}
+                            <h2>{{ _('Draft') }}</h2>
+                            {% for app in apps_draft %}
+                            {{ app_helper.render_app_short_summary(app, upload_method) }}
+                            {% endfor %}
+                            {% endif %}
+                        {% else %}
+                            <h2>{{ _('You have not created any projects') }}</h2>
+                            <a href="{{url_for('app.new')}}" class="btn btn-primary">{{ _('Get started') }}</a>
+                        {% endif %}
+                    {% else %}
+                        {{ app_helper.render_app_restricted() }}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
 {{ app_helper.broken_image() }}
 {% endblock %}
