--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -50,7 +50,7 @@
       <br>
       <br>
       <div class="row">
-          <div class="text-center">
+          <div class="col-xs-12 text-center">
               <a href="{{ url_for('account.register') }}" class="btn btn-primary"><i class="icon glyphicon glyphicon-white icon-user"></i>{{ _(' Create a new account') }}</a>
           </div>
       </div>
