More layout and style changes

--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -6,6 +6,7 @@
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/isotope.pkgd.min.js')}}"></script>
 
+<span class="set-main-bg" data-bg="pattern-white-carbon"></span>
 <div class="container-padded remove-padding-bottom">
     <section class="dark-grey pattern-classy-fabric">
         <div class="container padding-top">
