--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,6 +16,15 @@
   justify-content: flex-end;
 }
 
+.pull-down-center {
+  align-items: flex-end;
+  display: flex;
+  justify-content: flex-end;
+  height: 100%;
+  width: 50%;
+  padding-bottom: 25px;
+}
+
 a {
   color: #BA0000;
 }
@@ -154,6 +163,14 @@ div.white-rounded {
     border-radius: 15px;
 }
 
+div.white-rounded-panel {
+  background-color: #FFFFFF;
+  border: 1px solid #ECEDED;
+  border-radius: 15px;
+  display: inline-block;
+  width: 100%;
+}
+
 #show-app-stats {
   height: 300px;
 }
@@ -179,6 +196,10 @@ body {
 hr.extra-margins {
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+.container-max-height {
+  height: 100%;
 }
 
 .container-fluid {
@@ -1003,6 +1024,20 @@ p.score {
   color: #777777;
 }
 
+.inset-text-grey-header {
+  text-shadow: #efefef 0.5px 0.5px 0px;
+  font-weight: 300;
+  color: #777777;
+  margin-top: 0px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  padding: 10px;
+  -moz-box-shadow: inset 0px -3px 5px -3px rgba(0,0,0,0.2);
+  -webkit-box-shadow: inset 0px -3px 5px -3px rgba(0,0,0,0.2);
+  box-shadow: inset 0px -3px 5px -3px rgba(0,0,0,0.2);
+  background-image: url(../img/patterns/brushed.png);
+}
+
 .inset-text-mid-grey {
   text-shadow: #EDEDED 0.5px 0.5px 0px;
   font-weight: 300;
@@ -1111,7 +1146,7 @@ background-color: rgba(0,0,0,0.1);
 box-shadow: 0px 0px 30px rgba(0,0,0,0.8);
 }
 
-btn-circle:hover,
+.btn-circle:hover,
 .btn-circle:focus,
 .btn-circle:active,
 .btn-circle.active,
@@ -1318,8 +1353,6 @@ btn-circle:hover,
 
 @media (min-width: 992px) {
   .splash {
-    min-height: 750px;
-    max-height: 960px;
   }
   
   .splash .btn-circle {
@@ -1883,16 +1916,15 @@ background-color: rgba(255,255,255,1);
 
 
 .well {
-border-radius: 6px;
-background-image: url(../img/patterns/brushed.png);
-text-shadow: #efefef 0.5px 0.5px 0px;
-font-weight: 300;
-color: #777777;
-border-top: 1px solid #ECEDED;
-border-bottom: 1px solid #ECEDED;
-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
--webkit-box-shadow: 1px 0px 3px rgba(0,0,0,.2);
--moz-box-shadow: 0 2px 4px rgba(0,0,0,.2);
-z-index: 1;
-border: 1px solid rgba(255,255,255,0.5);
+  border-radius: 6px;
+  background-image: url(../img/patterns/brushed.png);
+  text-shadow: #efefef 0.5px 0.5px 0px;
+  font-weight: 300;
+  color: #777777;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 1px 0px 3px rgba(0,0,0,.2);
+  -moz-box-shadow: 0 2px 4px rgba(0,0,0,.2);
+  z-index: 1;
+  border: 1px solid rgba(255,255,255,0.5);
+  padding: 10px 40px 30px 40px;
 }
